2008-03-17  Sverker Nilsson  <sverker@sverker-laptop>

	* Several files, to make it complie without warnings in 32 bit
	  mode. 
	  NyBit is now defined as Py_intptr_t and limits are calculated
	  a'la pyport.h .

	* src/sets/bitset.h: using __LP64__ macro to indirectly define internal
	  conditional flags, NyBits_32 resp. NyBits_64
	
	*  guppy/heapy/__init__.py : checked sys.maxint to detmine arch
	   some size-dependent tests are relaxed if not 32-bit arch
	*  guppy/heapy/test_heapyc.py : relaxed a timing test
	
	* src/sets/nodeset.c &c. changed some more occurences of int to NyBit
	  or perhaps they just became long in some place.

2008-03-13  Sverker Nilsson  <sverker@sverker-laptop>
	*  Starting modifications to work with 64 bits.
	*  guppy/src/sets/ (bitset.h, nodeset.c, bitset.c), maybe others,
	changes to especially the index type used as bit number in bitsets.
	Defining type NyBit for this and also NySize. They are just
	longs right now. Testing with Ubuntu 7.10 / AMD 64. 

2007-02-16  Sverker Nilsson  <sverker@localhost>

	* Put it under svn. Changed to call it 0.1.7 in README and ANNOUNCE

2007-01-31  Sverker Nilsson  <sverker@localhost>

	* guppy/gsl/XHTML.py (Node2XHTML.visit_comment): Made it not
	output anything to the XHTML file.

2007-01-25  Sverker Nilsson  <sverker@localhost>

	* guppy/gsl/Document.py (_GLUECLAMP_.output_handlers): Added XHTML entry
	(Document.visit_output): Made the output mode specification case-insensitive.

	* guppy/gsl: Added XHTML.py module - initially a copy of Html.py.
	I am changing to be more conventional(?) - to use all upper case
	in the XHTML name since that is how it is written looks in
	documents on the web. (Is this contrary to Python conventions to
	use Capitalized names?) But it would be too weird to write Xhtml
	(or even worse XHtml) vs XHTML. 
	
2006-11-08  Sverker Nilsson  <sverker@localhost>

	* guppy/gsl/Html.py (Node2Html.__init__): Changed (default,
	still fixed) encoding to utf-8.


	Version 0.1.6
	